# bwa-mem2

./: .gitignore  .gitmodules  LICENSE  Makefile  NEWS.md  README-ori.md  README.md  sourceme_intelmpi.sh  test_mpibwa2.sh
ext/TAL-LISA-dev/LISA/ext/build-rmi/RMI/: Cargo.toml  LICENSE  README.md  example_param_grid.json
ext/TAL-LISA-dev/LISA/ext/build-rmi/RMI/rmi_lib/: Cargo.toml
ext/TAL-LISA-dev/LISA/ext/build-rmi/RMI/rmi_lib/src/: cache_fix.rs  codegen.rs  lib.rs  optimizer.rs
ext/TAL-LISA-dev/LISA/ext/build-rmi/RMI/rmi_lib/src/models/: balanced_radix.rs  cubic_spline.rs  histogram.rs  linear.rs  linear_spline.rs  mod.rs  normal.rs  radix.rs  stdlib.rs  utils.rs
ext/TAL-LISA-dev/LISA/ext/build-rmi/RMI/rmi_lib/src/train/: lower_bound_correction.rs  mod.rs  multi_layer.rs  two_layer.rs
ext/TAL-LISA-dev/LISA/ext/build-rmi/RMI/src/: load.rs  main.rs
ext/TAL-LISA-dev/LISA/ext/build-rmi/RMI/tests/: .gitignore  Makefile  find_tests.py  report.py
ext/TAL-LISA-dev/LISA/ext/build-rmi/RMI/tests/cache_fix_osm/: Makefile  main.cpp
ext/TAL-LISA-dev/LISA/ext/build-rmi/RMI/tests/cache_fix_wiki/: Makefile  main.cpp
ext/TAL-LISA-dev/LISA/ext/build-rmi/RMI/tests/max_size_wiki/: Makefile  main.cpp
ext/TAL-LISA-dev/LISA/ext/build-rmi/RMI/tests/simple_model_osm/: .gitignore  Makefile  main.cpp
ext/TAL-LISA-dev/LISA/ext/build-rmi/RMI/tests/simple_model_wiki/: Makefile  main.cpp
src/: FMI_search.cpp  FMI_search.h  QSufSort.cpp  bandedSWA.cpp  bandedSWA.h  bgzf.c  bgzf.h  bntseq.cpp  bntseq.h  bwa.cpp  bwa.h  bwamem.cpp  bwamem.h  bwamem_extra.cpp  bwamem_pair.cpp  bwt.h  (+52 more)
(+62 files in other folders)
