[package]
name = "rmi"
version = "0.1.0"
authors = ["Ryan Marcus <ryan@ryanmarc.us>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rmi"
path = "src/main.rs"

[profile.release]
debug = true

[dependencies]
rayon = "1.1"
memmap = "0.7.0"
byteorder = "1.3.2"
log = "0.4.8"
env_logger = "0.6.2"
clap = "2.33.0"
json = "0.12.0"
indicatif = "0.13.0"
rmi_lib = { path = "rmi_lib" }
