[package]
name = "rmi_lib"
version = "0.1.0"
authors = ["Ryan Marcus <ryan@ryanmarc.us>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
rayon = "1.1"
byteorder = "1.3.2"
log = "0.4.8"
env_logger = "0.6.2"
bytesize = "1.0.0"
approx = "0.3.2"
superslice = "1.0.0"
json = "0.12.0"
indicatif = "0.13.0"
tabular = "0.1.4"
